--- a/VectorSTEM.окончательный/index.html
+++ b/VectorSTEM.окончательный/index.html
@@ -1,6 +1,13 @@
+<title>VectorSTEM — STEM learning from 1st grade through university</title>
+<meta name="description" content="VectorSTEM is an academic learning space accessible to each and every person worldwide. Full understanding: definitions, intuition, structure, and step-by-step reasoning." />
+
 <!doctype html>
 <html lang="en">
 <head>
+  <title>VectorSTEM — STEM learning from 1st grade through university</title>
+<meta name="description" content="VectorSTEM is an academic learning space accessible to each and every person worldwide. Full understanding: definitions, intuition, structure, and step-by-step reasoning." />
+<link rel="icon" href="assets/images/favicon.png" type="image/png" />
+
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>VectorSTEM</title>
@@ -22,7 +29,76 @@
   </div>
 </header>
 
-    <section class="hero-wrap">
+<section class="home-mission">
+  <div class="container">
+
+    <!-- HERO IMAGE -->
+    <div class="home-hero-image">
+      <img src="assets/images/hero.png" alt="VectorSTEM hero" />
+    </div>
+
+    <!-- OVERLAY CARD -->
+    <div class="mission-card">
+      <!-- <div class="mission-title">About</div> -->
+
+<div class="mission-text">
+  <p class="mission-lead">
+    <span class="mission-brand"><strong>VectorSTEM</strong></span> is an academic learning space accessible to
+    <strong>everyone worldwide</strong>.
+  </p>
+
+  <p>
+    The goal is not “quick tricks,” but <strong>full understanding</strong>:
+    definitions, intuition, structure, and step-by-step reasoning.
+  </p>
+
+  <p class="mission-foot">
+    This website is built to foster <strong>critical and analytic</strong> thinking - and it’s <strong>100% free</strong>.
+  </p>
+</div>
+
+
+      <div class="mission-actions">
+        <a class="btn primary" href="courses.html">Explore Courses</a>
+      </div>
+    </div>
+
+  </div>
+</section>
+
+
+<!-- <section class="hero-wrap home-hero">
+  <div class="home-hero__content container reveal">
+
+    <div class="hero hero--on-bg">
+      <h1>STEM learning - from 1st grade through university level.</h1>
+      <p>VectorSTEM is an academic, structured learning space: clear theory, deep understanding, and serious problem-solving. Everything is built step-by-step with an inclusive, global mindset.</p>
+
+      <div class="hero-cta">
+        <a class="btn primary" href="courses.html">Explore Courses</a>
+        <a class="btn" href="contact.html">Contact</a>
+      </div>
+    </div>
+
+    <div class="hero-card hero-card--center">
+      <div class="hero-card-title">About • 100% free</div>
+
+      <div class="hero-card-text">
+        VectorSTEM is an academic learning space accessible to <strong>each and every person worldwide</strong>.
+        The goal is not “quick tricks,” but <strong>full understanding</strong>: definitions, intuition, structure, and step-by-step reasoning.
+        The platform is designed to foster <strong>critical and analytic</strong> thinking.
+      </div>
+
+      <div class="hero-card-actions">
+        <a class="btn primary" href="courses.html">Explore Courses</a>
+        <a class="btn" href="contact.html">Contact</a>
+      </div>
+    </div>
+
+  </div>
+</section> -->
+
+    <!-- <section class="hero-wrap">
       <div class="container hero reveal">
         <div class="hero-kicker">About</div>
         <h1>STEM learning — from 1st grade through university level.</h1>
@@ -39,7 +115,7 @@
           <a class="btn" href="contact.html">Request a topic</a>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <section class="section" style="background:var(--soft2)">
       <div class="container reveal">
@@ -117,7 +193,7 @@
   <div class="container">
     <div><strong>Email:</strong> vectorstem@gmail.com</div>
     <div><strong>Discord:</strong> <a href="https://discord.gg/ejdPP4sx" target="_blank" rel="noopener">discord.gg/ejdPP4sx</a></div>
-    <div class="small" style="margin-top:8px">© VectorSTEM</div>
+    <div class="small" style="margin-top:8px">© VectorSTEM 2026</div>
   </div>
 </footer>
   </div>
