--- a/VectorSTEM.окончательный/contact.html
+++ b/VectorSTEM.окончательный/contact.html
@@ -1,6 +1,10 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <title>VectorSTEM — STEM learning from 1st grade through university</title>
+<meta name="description" content="VectorSTEM is an academic learning space accessible to each and every person worldwide. Full understanding: definitions, intuition, structure, and step-by-step reasoning." />
+<link rel="icon" href="assets/images/favicon.png" type="image/png" />
+
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Contact — VectorSTEM</title>
@@ -38,7 +42,7 @@
           <button class="btn primary" type="submit">Send</button>
 
           <div class="small" style="margin-top:10px">
-            Office Hours (Winter, Math Lab): <strong>Wednesday 1:30–3:30 pm</strong> &amp; <strong>Thursday 1:30–4:30 pm</strong><br/>
+            Office Hours (Winter, SMC, Math Lab): <strong>Wednesday 1:30–3:30 pm</strong> &amp; <strong>Thursday 1:30–4:30 pm</strong><br/>
             Discord: <strong><a href="https://discord.gg/ejdPP4sx" target="_blank" rel="noopener">discord.gg/ejdPP4sx</a></strong><br/>
             Email: <strong>vectorstem@gmail.com</strong>
           </div>
@@ -50,7 +54,7 @@
   <div class="container">
     <div><strong>Email:</strong> vectorstem@gmail.com</div>
     <div><strong>Discord:</strong> <a href="https://discord.gg/ejdPP4sx" target="_blank" rel="noopener">discord.gg/ejdPP4sx</a></div>
-    <div class="small" style="margin-top:8px">© VectorSTEM</div>
+    <div class="small" style="margin-top:8px">© VectorSTEM 2026</div>
   </div>
 </footer>
   </div>
