--- a/VectorSTEM.окончательный/courses/calc3.html
+++ b/VectorSTEM.окончательный/courses/calc3.html
@@ -6,8 +6,10 @@
   <title>Calculus 3 (Multivariable) — VectorSTEM</title>
   <link rel="stylesheet" href="../styles.css" />
 </head>
+
 <body>
   <div class="page">
+
     <header class="header">
       <div class="container header-inner">
         <a class="brand" href="../index.html">VectorSTEM</a>
@@ -25,32 +27,251 @@
       <div class="container hero">
         <h1 style="font-size:34px">Calculus 3 (Multivariable)</h1>
         <p>This page is being built. Notes, problem sets, and solutions will be published here.</p>
-        <div class="hero-cta">
+        <!-- <div class="hero-cta">
+          <a class="btn primary" href="../courses.html">Back to Courses</a>
+          <a class="btn" href="../contact.html">Request a topic</a>
+        </div>
+      </div>
+    </section> -->
+
+    <section class="section">
+      <div class="container reveal">
+<h2 class="pdf-section-title">PDF Materials</h2>
+
+<div class="pdf-grid">
+
+  <div class="pdf-item">
+    <div class="pdf-left">
+      <div class="pdf-name">Three Dimensional Coordinate System</div>
+      <div class="pdf-meta">Lecture notes (PDF)</div>
+    </div>
+    <div class="pdf-actions">
+      <a class="btn pdf-open"
+         href="../assets/pdfs/3_Dimensional_Coordinate_System.pdf"
+         data-pdf="../assets/pdfs/3_Dimensional_Coordinate_System.pdf"
+         data-title="Three Dimensional Coordinate System">Full screen</a>
+      <a class="btn primary" href="../assets/pdfs/3_Dimensional_Coordinate_System.pdf" download>Download</a>
+    </div>
+  </div>
+
+    <div class="pdf-item">
+    <div class="pdf-left">
+      <div class="pdf-name">Three Dimensional Coordinate System - Solved Problems</div>
+      <div class="pdf-meta">Problems (PDF)</div>
+    </div>
+    <div class="pdf-actions">
+      <a class="btn pdf-open"
+         href="../assets/pdfs/3DCS__Problems.pdf"
+         data-pdf="../assets/pdfs/3DCS__Problems.pdf"
+         data-title="Three Dimensional Coordinate System - Solved Problems">Full screen</a>
+      <a class="btn primary" href="../assets/pdfs/3DCS__Problems.pdf" download>Download</a>
+    </div>
+  </div>
+
+      <div class="pdf-item">
+    <div class="pdf-left">
+      <div class="pdf-name">Vectors</div>
+      <div class="pdf-meta">Lecture notes (PDF)</div>
+    </div>
+    <div class="pdf-actions">
+      <a class="btn pdf-open"
+         href="../assets/pdfs/Vectors (1).pdf"
+         data-pdf="../assets/pdfs/Vectors (1).pdf"
+         data-title="Vectors">Full screen</a>
+      <a class="btn primary" href="../assets/pdfs/Vectors (1).pdf" download>Download</a>
+    </div>
+  </div>
+
+
+
+    <div class="pdf-item">
+    <div class="pdf-left">
+      <div class="pdf-name">The Dot Product</div>
+      <div class="pdf-meta">Lecture notes (PDF)</div>
+    </div>
+    <div class="pdf-actions">
+      <a class="btn pdf-open"
+         href="../assets/pdfs/The_Dot_Product.pdf"
+         data-pdf="../assets/pdfs/The_Dot_Product.pdf"
+         data-title="Vectors">Full screen</a>
+      <a class="btn primary" href="../assets/pdfs/The_Dot_Product.pdf" download>Download</a>
+    </div>
+  </div>
+
+
+      <div class="pdf-item">
+    <div class="pdf-left">
+      <div class="pdf-name">The Cross Product</div>
+      <div class="pdf-meta">Lecture notes (PDF)</div>
+    </div>
+    <div class="pdf-actions">
+      <a class="btn pdf-open"
+         href="../assets/pdfs/The_Cross_Product.pdf"
+         data-pdf="../assets/pdfs/The_Cross_Product.pdf"
+         data-title="Vectors">Full screen</a>
+      <a class="btn primary" href="../assets/pdfs/The_Cross_Product.pdf" download>Download</a>
+    </div>
+  </div>
+
+
+        <div class="pdf-item">
+    <div class="pdf-left">
+      <div class="pdf-name">Lines And Planes</div>
+      <div class="pdf-meta">Lecture notes (PDF)</div>
+    </div>
+    <div class="pdf-actions">
+      <a class="btn pdf-open"
+         href="../assets/pdfs/Line_and_Planes.pdf"
+         data-pdf="../assets/pdfs/Line_and_Planes.pdf"
+         data-title="Vectors">Full screen</a>
+      <a class="btn primary" href="../assets/pdfs/Line_and_Planes.pdf" download>Download</a>
+    </div>
+  </div>
+
+
+        <div class="pdf-item">
+    <div class="pdf-left">
+      <div class="pdf-name">Cylinders & Quadric Surfaces</div>
+      <div class="pdf-meta">Lecture notes (PDF)</div>
+    </div>
+    <div class="pdf-actions">
+      <a class="btn pdf-open"
+         href="../assets/pdfs/Cylinders___Quadric_Surfaces.pdf"
+         data-pdf="../assets/pdfs/Cylinders___Quadric_Surfaces.pdf"
+         data-title="Vectors">Full screen</a>
+      <a class="btn primary" href="../assets/pdfs/Cylinders___Quadric_Surfaces.pdf" download>Download</a>
+    </div>
+  </div>
+
+  <div class="pdf-item">
+    <div class="pdf-left">
+      <div class="pdf-name">Vector Fields</div>
+      <div class="pdf-meta">Lecture notes (PDF)</div>
+    </div>
+    <div class="pdf-actions">
+      <a class="btn pdf-open"
+         href="../assets/pdfs/Vector_Fields.pdf"
+         data-pdf="../assets/pdfs/Vector_Fields.pdf"
+         data-title="Vector Fields">Full screen</a>
+      <a class="btn primary" href="../assets/pdfs/Vector_Fields.pdf" download>Download</a>
+    </div>
+  </div>
+
+  <div class="pdf-item">
+    <div class="pdf-left">
+      <div class="pdf-name">Line Integrals</div>
+      <div class="pdf-meta">Lecture notes (PDF)</div>
+    </div>
+    <div class="pdf-actions">
+      <a class="btn pdf-open"
+         href="../assets/pdfs/Line_Integrals.pdf"
+         data-pdf="../assets/pdfs/Line_Integrals.pdf"
+         data-title="Line Integrals">Full screen</a>
+      <a class="btn primary" href="../assets/pdfs/Line_Integrals.pdf" download>Download</a>
+    </div>
+  </div>
+
+  <div class="pdf-item">
+    <div class="pdf-left">
+      <div class="pdf-name">Green’s Theorem</div>
+      <div class="pdf-meta">Lecture notes (PDF)</div>
+    </div>
+    <div class="pdf-actions">
+      <!-- у тебя файл реально с пробелом: "Green_s_Theorem .pdf" -->
+      <a class="btn pdf-open"
+         href="../assets/pdfs/Green_s_Theorem%20.pdf"
+         data-pdf="../assets/pdfs/Green_s_Theorem%20.pdf"
+         data-title="Green’s Theorem">Full screen</a>
+      <a class="btn primary" href="../assets/pdfs/Green_s_Theorem%20.pdf" download>Download</a>
+    </div>
+  </div>
+
+  <div class="pdf-item">
+    <div class="pdf-left">
+      <div class="pdf-name">Path Independence</div>
+      <div class="pdf-meta">Lecture notes (PDF)</div>
+    </div>
+    <div class="pdf-actions">
+      <a class="btn pdf-open"
+         href="../assets/pdfs/Path_Independance.pdf"
+         data-pdf="../assets/pdfs/Path_Independance.pdf"
+         data-title="Path Independence">Full screen</a>
+      <a class="btn primary" href="../assets/pdfs/Path_Independance.pdf" download>Download</a>
+    </div>
+  </div>
+
+  <div class="pdf-item">
+    <div class="pdf-left">
+      <div class="pdf-name">Surface Integrals</div>
+      <div class="pdf-meta">Lecture notes (PDF)</div>
+    </div>
+    <div class="pdf-actions">
+      <a class="btn pdf-open"
+         href="../assets/pdfs/Surface_Integrals.pdf"
+         data-pdf="../assets/pdfs/Surface_Integrals.pdf"
+         data-title="Surface Integrals">Full screen</a>
+      <a class="btn primary" href="../assets/pdfs/Surface_Integrals.pdf" download>Download</a>
+    </div>
+  </div>
+
+  <div class="pdf-item">
+    <div class="pdf-left">
+      <div class="pdf-name">The Divergence Theorem</div>
+      <div class="pdf-meta">Lecture notes (PDF)</div>
+    </div>
+    <div class="pdf-actions">
+      <a class="btn pdf-open"
+         href="../assets/pdfs/The_Divergence_Theorem.pdf"
+         data-pdf="../assets/pdfs/The_Divergence_Theorem.pdf"
+         data-title="The Divergence Theorem">Full screen</a>
+      <a class="btn primary" href="../assets/pdfs/The_Divergence_Theorem.pdf" download>Download</a>
+    </div>
+  </div>
+
+  <!-- ОДИН viewer на всю страницу (JS будет переставлять его под нужный пункт) -->
+  <div id="pdfViewer" class="pdf-viewer" hidden>
+    <div class="pdf-viewer-top">
+      <div id="pdfViewerTitle" class="pdf-viewer-title">PDF</div>
+      <div class="pdf-viewer-actions">
+        <a id="pdfViewerDownload" class="btn primary" href="#" download>Download</a>
+        <button id="pdfViewerClose" class="btn" type="button">Close</button>
+      </div>
+    </div>
+
+    <iframe
+      id="pdfViewerFrame"
+      class="pdf-viewer-frame"
+      src=""
+      title="PDF Viewer"
+      loading="lazy"
+    ></iframe>
+  </div>
+
+</div>
+
+      </div>
+    </section>
+
+
+    <section class="hero-wrap">
+      <div class="container hero">
+    <div class="hero-cta">
           <a class="btn primary" href="../courses.html">Back to Courses</a>
           <a class="btn" href="../contact.html">Request a topic</a>
         </div>
       </div>
     </section>
 
-    <section class="section">
-      <div class="container reveal">
-        <div class="card" style="padding:18px">
-          <strong>Coming soon</strong>
-          <p class="small" style="margin-top:8px;color:var(--muted)">
-            VectorSTEM publishes material in structured steps: definitions → intuition → examples → problem sets → full solutions.
-          </p>
-        </div>
-      </div>
-    </section>
-
     <footer class="footer">
-  <div class="container">
-    <div><strong>Email:</strong> vectorstem@gmail.com</div>
-    <div><strong>Discord:</strong> <a href="https://discord.gg/ejdPP4sx" target="_blank" rel="noopener">discord.gg/ejdPP4sx</a></div>
-    <div class="small" style="margin-top:8px">© VectorSTEM</div>
+      <div class="container">
+        <div><strong>Email:</strong> vectorstem@gmail.com</div>
+        <div><strong>Discord:</strong> <a href="https://discord.gg/ejdPP4sx" target="_blank" rel="noopener">discord.gg/ejdPP4sx</a></div>
+        <div class="small" style="margin-top:8px">© VectorSTEM 2026</div>
+      </div>
+    </footer>
+
   </div>
-</footer>
-  </div>
+
   <script src="../script.js"></script>
 </body>
 </html>
